src/objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Contact</label>
        <referenceTo>MUSW__Account_Contact__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_Full_name__c</fullName>
        <formula>Contact__r.FirstName &amp; &apos; &apos; &amp; Contact__r.MiddleName &amp; &apos; &apos; &amp; Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Full name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application Type</description>
        <label>Application Type (To be Deleted)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Resource_User_Id__c</fullName>
        <formula>Assigned_Resource__r.User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Resource User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned Resource</description>
        <label>Assigned Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person who is making the request.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>Current_Datetime__c</fullName>
        <description>Current datetime</description>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current datetime</inlineHelpText>
        <label>Current Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Envelope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Envelope</label>
        <referenceTo>Customer_Envelope__c</referenceTo>
        <relationshipLabel>Account Maintenance Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration</description>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Duration</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exam_Type__c</fullName>
        <formula>Text(Exam__r.Exam_Type__c)</formula>
        <label>Exam Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exam</label>
        <referenceTo>Education_History__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_JSON__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Form JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
	<fields>
        <fullName>Lic_Prog_Mailing_City_State_ZIP__c</fullName>
        <formula>License__r.Program_Mailing_City_State_ZIP__c</formula>
        <label>Lic Prog Mailing City State ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lic_Prog_Mailing_PO_Box__c</fullName>
        <formula>License__r.Program_Mailing_PO_Box__c</formula>
        <label>Lic Prog Mailing PO Box</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Applicant_Full_Name__c</fullName>
        <formula>License__r.Applicant_Full_Name__c</formula>
        <label>License Applicant Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Mailing_City__c</fullName>
        <formula>License__r.MUSW__Parcel__r.MUSW__City__c</formula>
        <label>License Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Mailing_State__c</fullName>
        <formula>Text(License__r.MUSW__Parcel__r.MUSW__State__c)</formula>
        <label>License Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Mailing_Street__c</fullName>
        <formula>License__r.MUSW__Parcel__r.MUSW__Street2__c</formula>
        <label>License Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Mailing_ZIP__c</fullName>
        <formula>License__r.MUSW__Parcel__r.Zip_Postal_Code__c</formula>
        <label>License Mailing ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Program_Email__c</fullName>
        <description>Formula field for License Program Email</description>
        <formula>License__r.Program_Email__c</formula>
        <inlineHelpText>Formula field for License Program Email</inlineHelpText>
        <label>License Program Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Program_Phone__c</fullName>
        <description>Formula field for License Program Phone in the  Email Templates</description>
        <formula>License__r.Program_Phone__c</formula>
        <inlineHelpText>Formula field for License Program Phone in the  Email Templates</inlineHelpText>
        <label>License Program Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Program_Type__c</fullName>
        <formula>Text(License__r.Application_Type__c)</formula>
        <label>License Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Profession__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
	<fields>
        <fullName>License_Ultimate_Parent_Account__c</fullName>
        <formula>License__r.Ultimate_Parent_Account__r.Name</formula>
        <label>License Ultimate Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_Of_Advertisements_To_Be_Reviewed__c</fullName>
        <label>Number Of Advertisements To Be Reviewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Certifications__c</fullName>
        <label>Number Of Certifications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permit_Plan_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Permit / Plan Review</description>
        <label>Permit / Plan Review</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>Profession</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Applicant__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Applicant</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Resource_Name__c</fullName>
        <formula>Assigned_Resource__r.User__r.FirstName &amp; &quot; &quot; &amp; Assigned_Resource__r.User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Party_Type__c</fullName>
        <label>Responsible Party Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Request_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Start Time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Deny</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approve</fullName>
                    <isActive>false</isActive>
                    <label>Approve</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                    <isActive>false</isActive>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>Eligible</fullName>
                    <isActive>false</isActive>
                    <label>Eligible</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                    <isActive>false</isActive>
                    <label>Scheduled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Validation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Permit_Plan_Review__c</columns>
        <columns>Resource_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Start_Time__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Ed_Taylors_Reviews</fullName>
        <columns>Resource_Name__c</columns>
        <columns>Permit_Plan_Review__c</columns>
        <columns>Applicant_Full_name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_Resource__c</field>
            <operation>equals</operation>
            <value>R-0005</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </filters>
        <filters>
            <field>Permit_Plan_Review__c</field>
            <operation>contains</operation>
            <value>DIS</value>
        </filters>
        <label>Ed Taylor&apos;s Reviews</label>
    </listViews>
    <listViews>
        <fullName>Jerry_Swim_Reviews</fullName>
        <columns>Resource_Name__c</columns>
        <columns>Permit_Plan_Review__c</columns>
        <columns>Applicant_Full_name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_Resource__c</field>
            <operation>equals</operation>
            <value>R-0006</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </filters>
        <filters>
            <field>Permit_Plan_Review__c</field>
            <operation>contains</operation>
            <value>DIS</value>
        </filters>
        <label>Jerry Swim&apos;s Reviews</label>
    </listViews>
    <listViews>
        <fullName>Mark_Fingers_Reviews</fullName>
        <columns>Resource_Name__c</columns>
        <columns>Permit_Plan_Review__c</columns>
        <columns>Applicant_Full_name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_Resource__c</field>
            <operation>equals</operation>
            <value>R-0008</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </filters>
        <filters>
            <field>Permit_Plan_Review__c</field>
            <operation>contains</operation>
            <value>DIS</value>
        </filters>
        <label>Mark Finger&apos;s Reviews</label>
    </listViews>
    <listViews>
        <fullName>Matt_Janzen_Reviews</fullName>
        <columns>Resource_Name__c</columns>
        <columns>NAME</columns>
        <columns>Permit_Plan_Review__c</columns>
        <columns>Applicant_Full_name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_Resource__c</field>
            <operation>equals</operation>
            <value>R-0009</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </filters>
        <filters>
            <field>Permit_Plan_Review__c</field>
            <operation>contains</operation>
            <value>DIS</value>
        </filters>
        <label>Matt Janzen&apos;s Reviews</label>
    </listViews>
    <listViews>
        <fullName>RBS_AMR_Queue_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>RBS AMR Queue</label>
        <queue>RBS_AMR_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RBS_Queue_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>RBS Queue</label>
        <queue>RBS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RE_AMR_Queue_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>RE AMR Queue</label>
        <queue>RE_AMR_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RE_Queue_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>RE Queue</label>
        <queue>RE_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tim_Vander_Leest_s_Reviews</fullName>
        <columns>Resource_Name__c</columns>
        <columns>Permit_Plan_Review__c</columns>
        <columns>Applicant_Full_name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_Resource__c</field>
            <operation>equals</operation>
            <value>R-0004</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </filters>
        <filters>
            <field>Permit_Plan_Review__c</field>
            <operation>contains</operation>
            <value>DIS</value>
        </filters>
        <label>Tim Vander Leest&apos;s Reviews</label>
    </listViews>
    <listViews>
        <fullName>Travis_Wagners_Reviews</fullName>
        <columns>Resource_Name__c</columns>
        <columns>Permit_Plan_Review__c</columns>
        <columns>Applicant_Full_name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_Resource__c</field>
            <operation>equals</operation>
            <value>R-0010</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </filters>
        <filters>
            <field>Permit_Plan_Review__c</field>
            <operation>contains</operation>
            <value>DIS</value>
        </filters>
        <label>Travis Wagner&apos;s Reviews</label>
    </listViews>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>